# NovelScraper

./: .editorconfig  .eslintrc.json  .gitignore  0.html  CODE_OF_CONDUCT.md  HanaDocument.py  HanaNovelScraper.py  LICENSE.md  MGAtest.docx  Martial God Asura Vol.1 1-2.docx  README.md  README.txt  VersionControlScript.py  WuxiaScraper.py  WuxiaTestScript.py  angular.json  angular.webpack.js  attributions.txt  components.json  index.html  library.json  main.js  main.ts  mainWindow.html  novel.py  novel2.0.py  package-lock.json  package.json  pnpm-lock.yaml  splashScreen.html  tailwind.config.js  tsconfig-serve.json  tsconfig.base.json  tsconfig.json  vite.config.ts
Alpha Build/: EpubLib.py  NovelPlanet.py.lnk  WuxiaScraper.py  WuxiaScraperOld.py
Beta Build/: HanaDocument.py  WuxiaNovelCompiler.py  WuxiaScraper.py
Current Beta Builds/: WuxiaScraper.pyw
Executable Build/: HanaDocument.py  NovelPlanetScraper.py  WuxiaScraper.py  run.py
Latest Beta Build/: GUI.pyw  WuxiaScraper.pyw
Latest Build/: HanaDocument.py  WuxiaScraper.pyw
Latest Build [V-0.3]/: WuxiaScraper.py
Latest Build [V-0.4]/: WuxiaScraper.py
Latest Build [V-0.5]/: WuxiaCo.py  WuxiaScraper.py
Latest Build [V-0.6.1]/: NovelPlanetScraper.py
Latest Build [V-0.6]/: NovelPlanetScraper.py  WuxiaScraper.py  run.py
NovelScraper/: build.gradle  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Square310x310Logo.psd  icon.icns
src-tauri/src/: docker.rs  lib.rs  main.rs
src-tauri/src/source/: mod.rs  novelbin.rs  novelfull.rs  novgo.rs  types.rs
(+242 files in other folders)
